@startuml

title __AUDIO's Class Diagram__\n

  namespace ninja.diku.music.audio {
    class ninja.diku.music.audio.AudioContext {
        - guild : Guild
        - messageChannel : MessageChannel
        - voiceChannel : VoiceChannel
        + AudioContext()
        + getGuild()
        + getMessageChannel()
        + getVoiceChannel()
        + setMessageChannel()
        + setVoiceChannel()
    }
  }
  

  namespace ninja.diku.music.audio {
    class ninja.diku.music.audio.AudioManager {
        {static} - instance : AudioManager
        {static} - players : HashMap<Guild, AudioPlayer>
        + createPlayer()
        {static} + getInstance()
        + getPlayer()
        + playerExists()
        + purgePlayer()
        + removePlayer()
        - AudioManager()
    }
  }
  

  namespace ninja.diku.music.audio {
    class ninja.diku.music.audio.AudioPlayer {
        + AudioPlayer()
        + getContext()
        + getScheduler()
    }
  }
  

  namespace ninja.diku.music.audio {
    class ninja.diku.music.audio.AudioPlayerSendHandler {
        - audioPlayer : AudioPlayer
        - lastFrame : AudioFrame
        + AudioPlayerSendHandler()
        + canProvide()
        + isOpus()
        + provide20MsAudio()
    }
  }
  

  namespace ninja.diku.music.audio {
    class ninja.diku.music.audio.LoadAudioHandler {
        + LoadAudioHandler()
        + loadFailed()
        + noMatches()
        + playlistLoaded()
        + trackLoaded()
    }
  }
  

  namespace ninja.diku.music.audio {
    class ninja.diku.music.audio.TrackScheduler {
        {static} - audioManager : AudioManager
        - queue : Queue<AudioTrack>
        + TrackScheduler()
        + clearQueue()
        + getQueue()
        + joinVoiceChannel()
        + leaveVoiceChannel()
        + onTrackEnd()
        + onTrackException()
        + onTrackStart()
        + onTrackStuck()
        + pollQueue()
        + purgePlayer()
        + queue()
    }
  }
  

  ninja.diku.music.audio.AudioManager -up-|> com.sedmelluq.discord.lavaplayer.player.DefaultAudioPlayerManager
  ninja.diku.music.audio.AudioPlayer -up-|> com.sedmelluq.discord.lavaplayer.player.DefaultAudioPlayer
  ninja.diku.music.audio.AudioPlayer o-- ninja.diku.music.audio.AudioContext : context
  ninja.diku.music.audio.AudioPlayer o-- ninja.diku.music.audio.TrackScheduler : scheduler
  ninja.diku.music.audio.AudioPlayerSendHandler .up.|> net.dv8tion.jda.api.audio.AudioSendHandler
  ninja.diku.music.audio.LoadAudioHandler .up.|> com.sedmelluq.discord.lavaplayer.player.AudioLoadResultHandler
  ninja.diku.music.audio.LoadAudioHandler o-- ninja.diku.music.audio.AudioPlayer : player
  ninja.diku.music.audio.TrackScheduler -up-|> com.sedmelluq.discord.lavaplayer.player.event.AudioEventAdapter
  ninja.diku.music.audio.TrackScheduler o-- ninja.diku.music.audio.AudioContext : context


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
